<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".OperatorsActivity">
    <Button
        android:id="@+id/btn_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_map"
        android:textColor="@android:color/black" />
    <Button
        android:id="@+id/btn_concat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_concat"
        android:textColor="@android:color/black" />
    <Button
        android:id="@+id/btn_flatmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_flatmap"
        android:textColor="@android:color/black" />
    <Button
        android:id="@+id/btn_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_zip"
        android:textColor="@android:color/black" />
    <Button
        android:id="@+id/btn_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_interval"
        android:textColor="@android:color/black" />
</LinearLayout>